2005-02-15  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): Failure diagnostic and core
	dump avoidence.

2005-02-07  Brian Lindauer  <jbl@localhost.localdomain>

	* lib/b_ringdir.c (bk_ringdir_init): Update checkpoint file at startup.

2005-01-20  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_run.c (bk_run_once): Protect against the generally
	unwanted situatio of deadlock in select(2).

2005-01-18  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_process): Flag to allow child process
	to close stdin/stdout of not needed.

2005-01-10  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_intinfo.c (intinfo_ioctl_map): Properly terminate nvmap.

2004-12-23  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_error.c (be_error_time): avoid gcc errs on call to localtime_r

	* lib/b_debug.c (bk_debug_iprint): tv.tv_sec isn't necessarily a time_t
	avoid gcc errs on calls to localtime_r where return ignored

	* include/libbk_oscompat.h (gmtime_r, localtime_r): exact[ish] compat

2004-12-23  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_time.c (bk_time_iso_parse): Allow for silent failure if
	the user requests.

2004-12-22  Seth Robertson  <seth@blue.sysdetect.com>

	* lib/b_debug.c (bk_debug_iprint): If you enable bk_debug_iprint
	debugging, you will get microsecond debug message accuracy

2004-12-22  Alexander Dupuy  <dupuy@sysdetect.com>

	* src/Makefile (LDLIBS): reduce unnecessary library dependencies

2004-12-22  Seth Robertson  <seth@stevedore.StevesRUs.sysdetect.com>

	* include/libbk_net.h: Add OPCODES to ARP define

2004-12-21  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ringdir.c: don't make ring files executable

2004-12-21  Seth Robertson  <seth@stevedore.StevesRUs.sysdetect.com>

	* include/libbk_net.h: Clarify what the dynamically sized arp header
	looks like so that you don't have to go to the reference manuals in
	order the use the structure.
